@@ -22,8 +22,8 @@ repositories {
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.1.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.1.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.2.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.2.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
