@@ -1,6 +1,5 @@
 log4j.rootCategory=INFO, stdout, status
 
-
 # Custom appender for logging most important messages only
 log4j.logger.status=INFO, status
 log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
@@ -11,20 +10,25 @@ log4j.appender.status.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.status.DatePattern='.'yyyy-MM-dd
 log4j.appender.status.Append=true
 
-
-
 # Standard output appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 log4j.appender.stdout.Threshold=DEBUG
 
-######## redirect all spring framework activity into a separate log
-log4j.logger.org.springframework=debug, log_spring
-log4j.additivity.org.springframework=false
-log4j.appender.log_spring=org.apache.log4j.RollingFileAppender
-log4j.appender.log_spring.Append=true
-log4j.appender.log_spring.File=logs/spring.log
-log4j.appender.log_spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_spring.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.log_spring.MaxFileSize=200MB
-log4j.appender.log_spring.MaxBackupIndex=3
+######## inserted annotations
+log4j.logger.insertedAnnots=debug, insertedAnnots
+log4j.appender.insertedAnnots=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.insertedAnnots.DatePattern='.'yyyy-MM
+log4j.appender.insertedAnnots.Append=true
+log4j.appender.insertedAnnots.File=logs/insertedAnnots.log
+log4j.appender.insertedAnnots.layout=org.apache.log4j.PatternLayout
+log4j.appender.insertedAnnots.layout.ConversionPattern=%d %p [%c] - %m%n
+
+######## deleted annotations
+log4j.logger.deletedAnnots=debug, deletedAnnots
+log4j.appender.deletedAnnots=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.deletedAnnots.DatePattern='.'yyyy-MM
+log4j.appender.deletedAnnots.Append=true
+log4j.appender.deletedAnnots.File=logs/deletedAnnots.log
+log4j.appender.deletedAnnots.layout=org.apache.log4j.PatternLayout
+log4j.appender.deletedAnnots.layout.ConversionPattern=%d %p [%c] - %m%n
